# osrs-api

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
osrs-api/: __init__.py  grandexchange.py
osrs_api/: __init__.py  grandexchange.py  restadapter.py
tests/: test_grandexchange.py  test_restadapter.py
